test/libhyperion/syntaxTests/conversion/function_cast_value_set.hyp
contract C {
	function f() public payable {
		function() external payable x = this.f{value: 7};
	}
}
// ----
// TypeError 4888: (46-75): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
